Support including pending updates in entities (#17)
* Support including pending updates in entities

* Support include pending
