# doc/openapi.json
@@ -14,6 +14,16 @@
         "operationId": "create_person",
         "parameters": [
           {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
+          {
             "name": "authorization",
             "in": "header",
             "required": false,
@@ -72,6 +82,16 @@
         "summary": "Create Organization",
         "operationId": "create_organization",
         "parameters": [
+          {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
           {
             "name": "authorization",
             "in": "header",
@@ -132,6 +152,16 @@
         "operationId": "create_event",
         "parameters": [
           {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
+          {
             "name": "authorization",
             "in": "header",
             "required": false,
@@ -190,6 +220,16 @@
         "summary": "Create Website",
         "operationId": "create_website",
         "parameters": [
+          {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
           {
             "name": "authorization",
             "in": "header",
@@ -250,6 +290,16 @@
         "operationId": "create_source",
         "parameters": [
           {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
+          {
             "name": "authorization",
             "in": "header",
             "required": false,
@@ -308,6 +358,16 @@
         "summary": "Create Relation",
         "operationId": "create_relation",
         "parameters": [
+          {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
           {
             "name": "authorization",
             "in": "header",
@@ -436,6 +496,16 @@
             }
           },
           {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
+          {
             "name": "authorization",
             "in": "header",
             "required": false,
@@ -489,6 +559,16 @@
             "schema": {
               "type": "string",
               "title": "Id"
+            }
+          },
+          {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
             }
           },
           {
@@ -560,6 +640,16 @@
             }
           },
           {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
+          {
             "name": "authorization",
             "in": "header",
             "required": false,
@@ -613,6 +703,16 @@
             "schema": {
               "type": "string",
               "title": "Id"
+            }
+          },
+          {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
             }
           },
           {
@@ -684,6 +784,16 @@
             }
           },
           {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
+          {
             "name": "authorization",
             "in": "header",
             "required": false,
@@ -737,6 +847,16 @@
             "schema": {
               "type": "string",
               "title": "Id"
+            }
+          },
+          {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
             }
           },
           {
@@ -808,6 +928,16 @@
             }
           },
           {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
+          {
             "name": "authorization",
             "in": "header",
             "required": false,
@@ -861,6 +991,16 @@
             "schema": {
               "type": "string",
               "title": "Id"
+            }
+          },
+          {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
             }
           },
           {
@@ -932,6 +1072,16 @@
             }
           },
           {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
+          {
             "name": "authorization",
             "in": "header",
             "required": false,
@@ -985,6 +1135,16 @@
             "schema": {
               "type": "string",
               "title": "Id"
+            }
+          },
+          {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
             }
           },
           {
@@ -1056,6 +1216,16 @@
             }
           },
           {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
+            }
+          },
+          {
             "name": "authorization",
             "in": "header",
             "required": false,
@@ -1109,6 +1279,16 @@
             "schema": {
               "type": "string",
               "title": "Id"
+            }
+          },
+          {
+            "name": "include_pending",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Pending"
             }
           },
           {
